--- a/notebooks/air2.ipynb
+++ b/notebooks/air2.ipynb
@@ -437,8 +437,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T18:05:33.417783Z",
-     "start_time": "2024-07-21T18:05:26.561504Z"
+     "end_time": "2024-07-21T19:56:26.168121Z",
+     "start_time": "2024-07-21T19:56:22.254396Z"
     }
    },
    "cell_type": "code",
@@ -446,7 +446,7 @@
     "import chardet\n",
     "\n",
     "# Open the file in binary mode\n",
-    "with open('Raw_data_1Hr_2021_site_5345_Sector-51_Gurugram_HSPCB_1Hr.csv', 'rb') as file:\n",
+    "with open('combined_data20to22.csv', 'rb') as file:\n",
     "    raw_data = file.read()\n",
     "\n",
     "# Detect the encoding\n",
@@ -460,11 +460,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The detected encoding is: ISO-8859-1\n"
+      "The detected encoding is: utf-8\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -2063,28 +2063,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-21T19:13:27.319959Z",
-     "start_time": "2024-07-21T19:13:27.279455Z"
+     "end_time": "2024-07-21T19:24:18.182582Z",
+     "start_time": "2024-07-21T19:24:17.396748Z"
     }
    },
    "cell_type": "code",
-   "source": "df_imputed.to_csv('combined_data20to22.csv')",
+   "source": "df_imputed.to_csv('combined_data20to22V2.csv', index = False)",
    "id": "63f88b1e64b71ccf",
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "to_csv() got multiple values for argument 'path_or_buf'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[35], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mdf_imputed\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mto_csv\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mcombined_data20to22.csv\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpath_or_buf\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43m.data\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\Desktop\\Git Repos\\MachineLearning\\.venv\\lib\\site-packages\\pandas\\util\\_decorators.py:333\u001B[0m, in \u001B[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    327\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(args) \u001B[38;5;241m>\u001B[39m num_allow_args:\n\u001B[0;32m    328\u001B[0m     warnings\u001B[38;5;241m.\u001B[39mwarn(\n\u001B[0;32m    329\u001B[0m         msg\u001B[38;5;241m.\u001B[39mformat(arguments\u001B[38;5;241m=\u001B[39m_format_argument_list(allow_args)),\n\u001B[0;32m    330\u001B[0m         \u001B[38;5;167;01mFutureWarning\u001B[39;00m,\n\u001B[0;32m    331\u001B[0m         stacklevel\u001B[38;5;241m=\u001B[39mfind_stack_level(),\n\u001B[0;32m    332\u001B[0m     )\n\u001B[1;32m--> 333\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m func(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
-      "\u001B[1;31mTypeError\u001B[0m: to_csv() got multiple values for argument 'path_or_buf'"
-     ]
-    }
-   ],
-   "execution_count": 35
+   "outputs": [],
+   "execution_count": 37
   },
   {
    "metadata": {
