--- a/notebooks/airauto.ipynb
+++ b/notebooks/airauto.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-22T08:13:42.215569Z",
-     "start_time": "2024-07-22T08:13:41.505380Z"
+     "end_time": "2024-07-22T09:55:51.767519Z",
+     "start_time": "2024-07-22T09:55:51.748171Z"
     }
    },
    "source": [
@@ -16,30 +16,56 @@
     "from matplotlib import pyplot as plt\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.impute import KNNImputer\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from commonfunc.funcs import extract_features, impute_data"
    ],
+   "outputs": [],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-22T09:55:51.939173Z",
+     "start_time": "2024-07-22T09:55:51.769871Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "features = ['PM2.5 (µg/m³)','PM10 (µg/m³)', 'NO (µg/m³)', 'NO2 (µg/m³)', 'NOx (ppb)', 'CO (mg/m³)', 'Benzene (µg/m³)','AT (°C)', 'RH (%)', 'WS (m/s)', 'Timestamp']\n",
+    "\n",
+    "df = extract_features(features=features, path='combined_data20to22.csv')\n",
+    "df = df.set_index('Timestamp')\n",
+    "df = impute_data(df)\n",
+    "df.info()"
+   ],
+   "id": "3a4f3999c419e53e",
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'azureml'",
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'info'",
      "output_type": "error",
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpickle\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m model \u001B[38;5;241m=\u001B[39m \u001B[43mpickle\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mmodel.pkl\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mrb\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(model\u001B[38;5;241m.\u001B[39mfeature_importances_)\n",
-      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'azureml'"
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[22], line 6\u001B[0m\n\u001B[0;32m      4\u001B[0m df \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39mset_index(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTimestamp\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      5\u001B[0m df \u001B[38;5;241m=\u001B[39m impute_data(df)\n\u001B[1;32m----> 6\u001B[0m \u001B[43mdf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minfo\u001B[49m()\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'info'"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 22
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-22T09:55:51.944162Z",
+     "start_time": "2024-07-22T09:55:51.942648Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "3a4f3999c419e53e"
+   "id": "6530734e7e4b1c41",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
